Fix privacy banner color contrast

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -562,6 +562,9 @@ a.image.cc {
     margin: 5px 0;
   }
 }
+.privacycolor {
+  color: #9E9E9E;
+}
 
 .archived-link > a.external-link {
   margin-left: 0.5rem;
